--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ html(lang='en')
 	body
 		header
 			h1 FreeCodeCamp Project: timestamp-microservice	API
+				a(href='https://github.com/anfelo/timestamp-api', target='_blank') -(GitHub)
 		section.main-wrapper
 			.description
 				h2 Description:
@@ -18,9 +19,9 @@ html(lang='en')
 					li If the string passed is NOT valid, the API returns a null value for each of the properties of the json object.
 			.examples
 				h2 Examples:
-				p https://timestamp-ms.herokuapp.com/December%2015,%202015
-				p https://timestamp-ms.herokuapp.com/1450137600
+				p https://anfelo-timestamp-ms.glitch.me/January%2018,%201991
+				p https://anfelo-timestamp-ms.glitch.me/664156800000
 				h2 Output:
-				p { "unix": 1450137600, "natural": "December 15, 2015" }
+				p { "unix": 664156800000, "natural": "January 18, 1991" }
 		footer
 			p &copy;2017 by anfelo
